@@ -1,5 +1,7 @@
 Changelog for statcache.
 
+- Add skipTV property for skipping by a TV
+- Add skipIfTagsRemain property for skipping Resources with non-cacheable tags
 - Fix resolver for Plugin Events always reporting false
 
 statcache 1.0.0-pl (August 24, 2012)
